<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/closeDialogImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:tint="#fff" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/apply_filter"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_by_language" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_of_forks" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_number_of_forks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/license" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_license"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_in" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_search_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/topic" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_topic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_weight="1"
                android:hint="@string/enter_topic_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="#ffbebebe"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/linear_from_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Select From date"
                    android:textColor="@android:color/black" />


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txt_from_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="YYYY/MM/DD"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/linear_to_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Select To date"
                    android:textColor="@android:color/black" />


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txt_to_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="YYYY/MM/DD"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/sort_by"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="4">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_watcher_count"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/watcher_count" />


            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_stars"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stars" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_updated"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/updated" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_forks"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forks" />


        </RadioGroup>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/order_by"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_order_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_ascending"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/ascending" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_descending"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/descending" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset_filter" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>